sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: identifier expected but integer literal found.
var etape:Int=-1
               ^